xorg-server: update to 1.4 but broken so far

--- a/xorg-xserver/xorg-server/HISTORY
+++ b/xorg-xserver/xorg-server/HISTORY
@@ -1,6 +1,10 @@
 2007-10-14 Ismael E. Luceno <ismael.luceno@gmail.com>
 	* DETAILS: updated description & short
 
+2007-09-09 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* DETAILS: version update
+	* DEPENDS: new depends pixman, hal and dbus
+
 2007-09-07 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* BUILD: added a fix for a gcc 4.2.0 regression
 
