ath5k: Added Atheros OpenHAL driver

--- a/ChangeLog
+++ b/ChangeLog
@@ -958,6 +958,9 @@
 	* mobile/acpi-support: added spell, various scripts for laptops,
 	  bug #13998
 
+2007-10-14 Eric Sandall <sandalle@sourcemage.org>
+	* kernels/ath5k: Added ath5k Atheros OpenHAL driver
+
 2007-10-07 Eric Sandall <sandalle@sourcemage.org>
 	* FUNCTIONS: Copied get_kernel_config and friends from
 	  z-rejected/FUNCTIONS
