kipi-plugins: added arts for disabling #14038

--- a/kde-apps/kipi-plugins/HISTORY
+++ b/kde-apps/kipi-plugins/HISTORY
@@ -1,3 +1,6 @@
+2007-10-24 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DEPENDS: added arts for disabling #14038
+
 2007-09-18 Treeve Jelbert <treeve@sourcemage.org>
 	* TRIGGERS: added, to check libkexiv2 chamges
 
