--- a/mail/thunderbird/HISTORY
+++ b/mail/thunderbird/HISTORY
@@ -1,3 +1,6 @@
+2007-11-13 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: ENIGMAIL 0.95.5
+
 2007-08-24 Arjan Bouter <abouter@sourcemage.org>
 	* DETAILS: patchlevel++
 	* DEPENDS: added gnome-panel
