--- a/graphics-libs/vips/HISTORY
+++ b/graphics-libs/vips/HISTORY
@@ -1,3 +1,9 @@
+2007-11-14 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* BUILD: removed, not needed anymore
+	* DETAILS: Fixed SOURCE_URL[0]
+	  updated spell to 7.12.5
+	  removed stale SOURCE_URL[1]
+
 2006-09-18 Flavien Bridault <vlaaad@sourcemage.org>
 	* DETAILS: Updated to 7.10.21
 
