--- a/net/ypserv/HISTORY
+++ b/net/ypserv/HISTORY
@@ -1,3 +1,6 @@
+2007-11-14 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* INSTALL: use install_config_file so things get tracked
+
 2006-09-21 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed BUILD_API=2.
 
