--- a/net/ypserv/HISTORY
+++ b/net/ypserv/HISTORY
@@ -1,4 +1,6 @@
 2007-11-14 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DETAILS: Fixed SOURCE_URL[0]
+	  updated spell to 2.19
 	* INSTALL: use install_config_file so things get tracked
 
 2006-09-21 Juuso Alasuutari <iuso@sourcemage.org>
