--- a/mail/thunderbird/HISTORY
+++ b/mail/thunderbird/HISTORY
@@ -1,3 +1,8 @@
+2007-11-14 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.0.0.9, SECURITY_PATCH=10
+	* mozilla.gpg: updated "Mozilla Software Releases" key
+	  thunderbird-2.0.0.9-source is signed by 17785FE8 [expires: 2009-07-16]
+
 2007-11-13 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: ENIGMAIL 0.95.5
 
