linux updated pre mm patches

--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,7 @@
+2007-11-14 David Brown <dmlb2000@gmail.com>
+	* latest.defaults: updated latest to 2.6.24-rc2-mm1
+	* info/patches/mm_patches/2.6.24-rc2-mm1: added
+
 2007-11-12 Dale E. Edmons<demaillists@comcast.net>
 	* templates/README: Corrected minor typos
 	* templates/menu.lst.tmplt: removed vga=791, prevents boot, default okay
