--- a/utils/vixie-cron/HISTORY
+++ b/utils/vixie-cron/HISTORY
@@ -1,3 +1,7 @@
+2007-11-14 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* BUILD: fixes for paths
+	* init.d/crond: fixes for paths
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
