utils/dcron: new spell, dillon's cron

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-11-14 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* utils/dcron: new spell, dillon's cron
+
 2007-11-14 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* net/envbot: An advanced modular IRC bot coded in bash #14103
 
