fcron: added PROVIDES

--- a/utils/fcron/HISTORY
+++ b/utils/fcron/HISTORY
@@ -2,6 +2,7 @@
 	* BUILD: fixes for paths
 	* init.d/fcron: run in runlevel 3
 	* DETAILS: patchlevel++, all users advised to update
+	* PROVIDES: provides CRON
 
 2007-11-09 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.0.4
