--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2007-11-14 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* utils/dcron: new spell, dillon's cron
+	* disk/djmount: new spell, upnp fuse-based mounting daemon
 
 2007-11-11 Arjan Bouter <abouter@sourcemage.org>
 	* windowmanagers/MAINTAINER: i'm replacing e-type as maintainer
