adding compiz-fusion-plugins-unsupported

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-11-15 Lalo Martins <lalo@sourcemage.org>
+	* compiz-fusion/compiz-fusion-plugins-unsupported: new spell
+
 2007-10-21 Ladislav Hagara <hgr@vabo.cz>
 	* crypto/gpgdir: new spell
 	  recursively encrypts/decrypts directories using a GPG key
