--- a/audio-libs/faad2/HISTORY
+++ b/audio-libs/faad2/HISTORY
@@ -1,3 +1,7 @@
+2007-11-14 Arwed v. Merkatz <v.merkatz@gmx.net>
+	* UP_TRIGGERS: up_trigger because of API change that breaks stuff
+	  (faacDec* got removed)
+
 2007-11-04 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.6.1
 	* PRE_BUILD: disable some patching
