giflib: added UP_TRIGGERS for switch from libungif

--- a/graphics-libs/giflib/HISTORY
+++ b/graphics-libs/giflib/HISTORY
@@ -1,3 +1,7 @@
+2007-11-14 Arwed v. Merkatz <v.merkatz@gmx.net>
+	* UP_TRIGGERS: added to up_trigger dependant spells on the switch
+	  from libungif to libgif
+
 2007-11-11 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* CONFLICTS: make it default to y for deprecation
 
