ffmpeg-svn: fixed libvorbis configure switch for latest version

--- a/video/ffmpeg-svn/HISTORY
+++ b/video/ffmpeg-svn/HISTORY
@@ -1,3 +1,7 @@
+2007-11-14 Arwed v. Merkatz <v.merkatz@gmx.net>
+	* DEPENDS: removed --enable-libogg switch from vorbis support,
+	  it's not there anymore
+
 2007-09-02 Arjan Bouter <abouter@sourcemage.org>
 	* CONFIGURE: added a question for libswscale
 	* BUILD: added swscale option to OPTS
