--- a/xorg-lib/libxv/HISTORY
+++ b/xorg-lib/libxv/HISTORY
@@ -1,3 +1,6 @@
+2007-10-26  Ismael E. Luceno <ismael.luceno@gmail.com>
+	* DETAILS: update description & short
+
 2007-01-06 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: version update
 
