--- a/xorg-lib/libxp/HISTORY
+++ b/xorg-lib/libxp/HISTORY
@@ -1,3 +1,6 @@
+2007-10-26  Ismael E. Luceno <ismael.luceno@gmail.com>
+	* DETAILS: update description & short
+
 2005-12-22 Robin Cook <rcook@wyrms.net>
 	* DETAILS: added XORG_VER
 	  updated SOURCE, SOURCE_URL, and SOURCE_DIRECTORY
