--- a/libs/argtable/HISTORY
+++ b/libs/argtable/HISTORY
@@ -1,3 +1,6 @@
+2007-11-15 Remko van der Vossen <wich@sourcemage.org>
+	* DETAILS: 2.7
+
 2007-05-21 Remko van der Vossen <wich@stack.nl>
 	* DETAILS: Created spell
 
