--- a/i18n/anthy/HISTORY
+++ b/i18n/anthy/HISTORY
@@ -1,5 +1,5 @@
 2007-11-15 Remko van der Vossen <wich@sourcemage.org>
-	# DETAILS: version 9100d
+	* DETAILS: version 9100d
 
 2007-07-18 Remko van der Vossen <wich@stack.nl>
 	* DETAILS: version 9100
