--- a/kde-apps/ktorrent/HISTORY
+++ b/kde-apps/ktorrent/HISTORY
@@ -1,3 +1,6 @@
+2007-11-15 Julien "_kaze_" ROZO <julien@rozo.org>
+	* DETAILS: Updated to version 2.2.3
+
 2007-09-01 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 2.2.2
 
