audio-libs/libdiscid: new spell, musicbranz libdiscid

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-11-15 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* audio-libs/libdiscid: new spell, musicbranz libdiscid
+
 2007-11-14 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* utils/dcron: new spell, dillon's cron
 	* disk/djmount: new spell, upnp fuse-based mounting daemon
