xmms2: update to 0.4DrKosmos

--- a/audio-players/xmms2/HISTORY
+++ b/audio-players/xmms2/HISTORY
@@ -1,3 +1,10 @@
+2007-11-15 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* DETAILS: version update 0.4DrKosmos
+	* CONFIGURE: new options
+	* DEPENDS: new optionals
+	* PRE_BUILD: some more sedits
+	* BUILD: take out a large chunk of workaround code
+
 2007-11-04 Arjan Bouter <abouter@sourcemage.org>
 	* PRE_BUILD: fixed ecore_config naming
 
