soprano: needs qt4 tools

--- a/libs/soprano/HISTORY
+++ b/libs/soprano/HISTORY
@@ -1,3 +1,6 @@
+2007-11-16 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DEPENDS: needs qt4 with tools (qttest)
+
 2007-11-07 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: add optional clucene
 
