kdebase: added force_depends on kdelibs #14082

--- a/kde-core/kdebase/HISTORY
+++ b/kde-core/kdebase/HISTORY
@@ -1,3 +1,6 @@
+2007-11-16 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DEPENDS: added force_depends on kdelibs #14082
+
 2007-10-20 Juuso Alasuutari <iuso@sourcemage.org>
 	* FINAL: Removed warning about paths in kdmrc, they have been made
 	  xorg-modular-compliant.
