linux updated maintenance patches

--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,7 @@
+2007-11-16 David Brown <dmlb2000@gmail.com>
+	* latest.defaults: updated latest to patch-2.6.23.2
+	* info/patches/maintenance_patches/patch-2.6.23.2: added
+
 2007-11-14 David Brown <dmlb2000@gmail.com>
 	* latest.defaults: updated latest to 2.6.24-rc2-mm1
 	* info/patches/mm_patches/2.6.24-rc2-mm1: added
