linux updated maintenance patches again... *sigh*

--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,11 @@
+2007-11-16 David Brown <dmlb2000@gmail.com> 
+	* latest.defaults: updated latest to patch-2.6.23.7
+	* info/patches/maintenance_patches/patch-2.6.23.7: added
+	* info/patches/maintenance_patches/patch-2.6.23.6: added
+	* info/patches/maintenance_patches/patch-2.6.23.5: added
+	* info/patches/maintenance_patches/patch-2.6.23.4: added
+	* info/patches/maintenance_patches/patch-2.6.23.3: added
+
 2007-11-16 David Brown <dmlb2000@gmail.com>
 	* latest.defaults: updated latest to patch-2.6.23.2
 	* info/patches/maintenance_patches/patch-2.6.23.2: added
