--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,7 @@
+2007-11-16 David Brown <dmlb2000@gmail.com>
+	* latest.defaults: updated latest to patch-2.6.23.8
+	* info/patches/maintenance_patches/patch-2.6.23.8: added
+
 2007-11-16 David Brown <dmlb2000@gmail.com> 
 	* latest.defaults: updated latest to patch-2.6.23.7
 	* info/patches/maintenance_patches/patch-2.6.23.7: added
