--- a/shell-term-fm/yakuake/HISTORY
+++ b/shell-term-fm/yakuake/HISTORY
@@ -1,3 +1,6 @@
+2007-11-17 Julien "_kaze_" ROZO <julien@rozo.org>
+	* DETAILS: updated to version 2.8, fixed WEB_SITE and SOURCE_URL
+
 2006-07-02 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* DETAILS: 2.7.5; fixed urls
 
