flup: new spell, random assortment of WSGI servers written by Allan Saddi

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-11-17 Vlad Glagolev <stealth@sourcemage.org>
+	* python-devel/flup: new spell, assortment of WSGI servers
+
 2007-11-15 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* audio-libs/libdiscid: new spell, musicbranz libdiscid
 
