video/ffmpeg-svn: fixed a header file

--- a/video/ffmpeg-svn/HISTORY
+++ b/video/ffmpeg-svn/HISTORY
@@ -1,3 +1,7 @@
+2007-11-17 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* PRE_BUILD, 300_c++_compliant_headers.diff: added small patch
+	  from debian to make the headers C++ compliant.
+
 2007-11-14 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* DEPENDS: removed --enable-libogg switch from vorbis support,
 	  it's not there anymore
