--- a/video/dvbcut/HISTORY
+++ b/video/dvbcut/HISTORY
@@ -1,3 +1,12 @@
+2007-11-17 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: updated to 0.5.4
+	* DEPENDS, BUILD: added missing dependencies, use system ffmpeg
+	  dvbcut-0.5.3-ffmpeg-compat.patch,
+	  dvbcut-0.5.4-ffmpeg-compat2.patch,
+	  dvbcut-0.5.4-ffmpeg-compat3.patch, 
+	  dvbcut-0.5.4-gcc42.patch, PRE_BUILD: added patches from gentoo
+	  to make dvbcut compile
+
 2007-04-07 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* dvbcut-SConstruct.diff: removed binary garbage
 
