--- a/video-libs/gst-plugins-base/HISTORY
+++ b/video-libs/gst-plugins-base/HISTORY
@@ -1,3 +1,6 @@
+2007-11-16 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 0.10.15
+
 2007-08-04 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 0.10.14
 
