linux updated misc maintenance patches

--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,4 +1,9 @@
 2007-11-16 David Brown <dmlb2000@gmail.com>
+	* info/patches/maintenance_patches/patch-2.6.12.6: added
+	* info/patches/maintenance_patches/patch-2.6.13.5: added
+	* info/patches/maintenance_patches/patch-2.6.22.13: added
+
+2007-11-16 David Brown <dmlb2000@gmail.com>
 	* latest.defaults: updated latest to patch-2.6.23.8
 	* info/patches/maintenance_patches/patch-2.6.23.8: added
 
