--- a/chat-im/gajim/HISTORY
+++ b/chat-im/gajim/HISTORY
@@ -1,3 +1,7 @@
+2007-11-17 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.11.3
+	* DEPENDS: cleaned up to make it more readable
+
 2007-09-25 Pol Vinogradov <vin.public@gmail.com>
 	* DEPENDS: added libxscrnsaver as optional if xorg is modular
 	  and dbus-python
