--- a/libs/libixp/HISTORY
+++ b/libs/libixp/HISTORY
@@ -1,3 +1,6 @@
+2007-11-17 Mathieu Lonjaret <lejatorn@sourcemage.org>
+	* DETAILS: update to 0.4
+
 2007-10-29 Mathieu Lonjaret <lejatorn@sourcemage.org>
 	* DEPENDS: created this file to add mercurial depend (for pulling
 	  devel version).
