--- a/windowmanagers/wmii/HISTORY
+++ b/windowmanagers/wmii/HISTORY
@@ -1,4 +1,7 @@
 2007-10-28 Mathieu Lonjaret <lejatorn@sourcemage.org>
+	* DETAILS: update to 3.6
+
+2007-10-28 Mathieu Lonjaret <lejatorn@sourcemage.org>
 	* DETAILS: updated to 20071003 snap
 	* DEPENDS: readdded libixp, added plan9port for rc shell config
 
