config-general: Added new spell.  Needed for gscan2pdf update.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-11-17 George Sherwood <george@beernabeer.com>
+	* perl-cpan/config-general: new spell, needed for gscan2pdf
+
 2007-11-17 Vlad Glagolev <stealth@sourcemage.org>
 	* python-devel/flup: new spell, assortment of WSGI servers
 
