--- a/graphics/gscan2pdf/HISTORY
+++ b/graphics/gscan2pdf/HISTORY
@@ -1,3 +1,7 @@
+2007-11-17 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 0.9.18
+	* DEPENDS: Now depends config-general
+
 2007-10-03 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 0.9.17
 
