--- a/net/bind/HISTORY
+++ b/net/bind/HISTORY
@@ -1,3 +1,6 @@
+2007-11-17 David Brown <dmlb2000@gmail.com>
+	* PRE_REMOVE: if /etc/bind is a symlink the backup doesn't work
+
 2007-10-24 Elisamuel Resto <ryuji@mages.ath.cx>
 	* DETAILS: removed gcc34
 	* DEPENDS: removed
