--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,7 @@
+2007-11-17 David Brown <dmlb2000@gmail.com>
+	* latest.defaults: updated latest to patch-2.6.24-rc3
+	* info/patches/PRE_2_6/patch-2.6.24-rc3: added
+
 2007-11-16 David Brown <dmlb2000@gmail.com>
 	* info/patches/maintenance_patches/patch-2.6.12.6: added
 	* info/patches/maintenance_patches/patch-2.6.13.5: added
