--- a/crypto/opencdk/HISTORY
+++ b/crypto/opencdk/HISTORY
@@ -1,3 +1,7 @@
+2007-11-17 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 0.6.6 (signed by 27F36D14)
+	* opencdk.gpg: added key 27F36D14
+
 2007-10-23 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: make 0.6 default OPENCDK_BRANCH
 
