module-init-tools added some extra options I find useful to the init script

--- a/kernels/module-init-tools/HISTORY
+++ b/kernels/module-init-tools/HISTORY
@@ -1,3 +1,8 @@
+2007-11-17 David Brown <dmlb2000@gmail.com>
+	* init.d/modutils: added some options that I find useful so others may
+	* init.d/modutils.conf: added for the options I find useful.. default
+	  is the current behaviour
+
 2007-10-31 Treeve Jelbert <treeve@pi.be>
 	* DETAILS: version 3.4
 	  new url, new sig
