--- a/telephony/asterisk/HISTORY
+++ b/telephony/asterisk/HISTORY
@@ -1,3 +1,6 @@
+2007-11-18 Martin Spitzbarth <m.spitzbarth@gmx.de>
+	* DETAILS: updated spell to 1.4.14
+
 2007-10-11 Martin Spitzbarth <m.spitzbarth@gmx.de>
 	* patches/1.4r80750_app_voicemail.c: deleted (obolsete since 1.4.12.1)
 	* DETAILS: updated spell to 1.4.13
