--- a/telephony/asterisk-addons/HISTORY
+++ b/telephony/asterisk-addons/HISTORY
@@ -1,3 +1,6 @@
+2007-11-18 Martin Spitzbarth <m.spitzbarth@gmx.de>
+	* DETAILS: updated spell to 1.4.4
+
 2007-10-06 Martin Spitzbarth <m.spitzbarth@gmx.de>
 	* DETAILS: updated spell to 1.4.3
 	  switched to the asterisk.gpg keyring for source verification
