cherrypy: 2.x <-> 3.x, added flup optionally for WSGI-stuff, cleaned up

--- a/python-devel/cherrypy/HISTORY
+++ b/python-devel/cherrypy/HISTORY
@@ -1,3 +1,9 @@
+2007-11-19 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: moved `SHORT='
+	* DEPENDS: added `flup' as optional to support
+	  WSGI-stuff like [Fast|S]CGI, mod_python, etc.
+	* PREPARE: 2.x <-> 3.x
+
 2007-08-16 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.0.2
 
@@ -51,4 +57,3 @@
 	* DETAILS: version 2.1.0-rc2 
 	* BUILD, DEPENDS: added
 	  spell created
-
