--- a/utils/linux_logo/HISTORY
+++ b/utils/linux_logo/HISTORY
@@ -1,3 +1,7 @@
+2007-11-18 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 5.02, removed UPDATED
+	* BUILD: updated
+
 2006-06-28 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Removed BUILD_API=2, set grimoire-wide
 
