--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-19 Pol Vinogradov <vin.public@gmail.com>
+	* xfce/ristretto: new spell, a fast and lightweight picture-viewer
+	  for the Xfce desktop environment
+
 2007-11-17 George Sherwood <george@beernabeer.com>
 	* perl-cpan/config-general: new spell, needed for gscan2pdf
 
