--- a/mail/claws-mail-extra-plugins/HISTORY
+++ b/mail/claws-mail-extra-plugins/HISTORY
@@ -1,3 +1,7 @@
+2007-11-19 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 3.1.0
+	* CONFIGURE: added new tnef_parse plugin
+
 2007-10-03 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: fixed WEB_SITE
 
