--- a/gnome2-apps/mail-notification/HISTORY
+++ b/gnome2-apps/mail-notification/HISTORY
@@ -1,3 +1,15 @@
+2007-11-15 Andraž 'ruskie' Levstik <ruskie@mages.ath.cx>
+	* DETAILS: converted to upstream signature checking
+	* PRE_BUILD: patching and sedding for various fixes
+	* mail-notification-4.1-find-evo-2.12.patch: added
+	* A3B8006A.gpg: upstream key added
+
+2007-11-15 Andraž 'ruskie' Levstik <ruskie@mages.ath.cx>
+	* A3B8006A.gpg: added gpg keyring
+
+2007-11-15 Andraž 'ruskie' Levstik <ruskie@mages.ath.cx>
+	* DETAILS: Changed SOURCE_URL[0] extension
+
 2007-05-20 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* DEPENDS: changed evolution2 to evolution
 
