mail-notification: missing depends

--- a/gnome2-apps/mail-notification/HISTORY
+++ b/gnome2-apps/mail-notification/HISTORY
@@ -1,3 +1,6 @@
+2007-11-19 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* DEPENDS: missing libnotify and eel2 depends
+
 2007-11-15 Andraž 'ruskie' Levstik <ruskie@mages.ath.cx>
 	* DETAILS: converted to upstream signature checking
 	* PRE_BUILD: patching and sedding for various fixes
