xmms2: minor but important bugfix

--- a/audio-players/xmms2/HISTORY
+++ b/audio-players/xmms2/HISTORY
@@ -1,3 +1,8 @@
+2007-11-19 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* BUILD: gah stupid me forgot to append $OPTS
+	* PRE_BUILD: trick sorcery into providing configure --help option
+	* DETAILS: patchlevel++
+
 2007-11-15 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: version update 0.4DrKosmos
 	* CONFIGURE: new options
