xmms2: added UP_TRIGGERS

--- a/audio-players/xmms2/HISTORY
+++ b/audio-players/xmms2/HISTORY
@@ -2,6 +2,7 @@
 	* BUILD: gah stupid me forgot to append $OPTS
 	* PRE_BUILD: trick sorcery into providing configure --help option
 	* DETAILS: patchlevel++
+	* UP_TRIGGERS: added, forgot to do it earlier
 
 2007-11-15 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: version update 0.4DrKosmos
