mail/libytnef: new spell, TNEF Stream Parser Library

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-11-19 Ladislav Hagara <hgr@vabo.cz>
+	* mail/libytnef: new spell, TNEF Stream Parser Library
+
 2007-11-19 Pol Vinogradov <vin.public@gmail.com>
 	* xfce/ristretto: new spell, a fast and lightweight picture-viewer
 	  for the Xfce desktop environment
