--- a/security/nmap/HISTORY
+++ b/security/nmap/HISTORY
@@ -1,3 +1,6 @@
+2007-11-19 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DEPENDS: added optional pcre #9597
+
 2006-12-08 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 4.20, removed UPDATED
 
