--- a/video/ffmpeg-svn/HISTORY
+++ b/video/ffmpeg-svn/HISTORY
@@ -2,6 +2,7 @@
 	* PREPARE, DETAILS: removed amr-nb-fixed, not supported anymore
 	* BUILD, DETAILS, PREPARE, PRE_BUILD: commented out the whole amr
 	  stuff as it requires the real libs now which we don't have
+	* BUILD: always pass the swscale options, not only if amr is enabled
 
 2007-11-17 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* PRE_BUILD, 300_c++_compliant_headers.diff: added small patch
