--- a/kernels/virtualbox-module/HISTORY
+++ b/kernels/virtualbox-module/HISTORY
@@ -1,3 +1,6 @@
+2007-11-19 Julien "_kaze_" ROZO <julien@rozo.org>
+	* TRIGGERS: added, virtualbox-module is casted if linux is casted again.
+
 2007-11-04 Julien "_kaze_" ROZO <julien@rozo.org>
 	* INSTALL: added an udev rule to put the right permissions on /dev/vboxdrv
 
