--- a/security/nmap/HISTORY
+++ b/security/nmap/HISTORY
@@ -1,3 +1,6 @@
+2007-11-19 Ladislav Hagara <hgr@vabo.cz>
+	* DEPENDS: --with-pcre=included -> --with-libpcre=included
+
 2007-11-19 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* DEPENDS: added optional pcre #9597
 
