itools: longdesc formatting cleanup

--- a/python-devel/itools/HISTORY
+++ b/python-devel/itools/HISTORY
@@ -1,3 +1,6 @@
+2007-11-20 Ethan "eekee" Grammatikidis <eekee57@fastmail.fm>
+	* DETAILS: longdesc formatting cleanup
+
 2007-09-27 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.16.9
 
