--- a/graphics/gscan2pdf/HISTORY
+++ b/graphics/gscan2pdf/HISTORY
@@ -1,3 +1,6 @@
+2007-11-20 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 0.9.19
+
 2007-11-17 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 0.9.18
 	* DEPENDS: Now depends config-general
