--- a/smgl/init.d/HISTORY
+++ b/smgl/init.d/HISTORY
@@ -1,3 +1,7 @@
+2007-11-20 Vlad Glagolev <stealth@sourcemage.org>
+	* init.d/hostname.sh: added execution of `domainname'
+	  (if exists /etc/defaultdomain containing the domain name)
+
 2007-09-26 David Brown <dmlb2000@gmail.com>
 	* mountall.sh: added luks partition additions for encrypted partitions 
 	* DETAILS: updated patchlevel
