--- a/gnome2-apps/gnumeric/HISTORY
+++ b/gnome2-apps/gnumeric/HISTORY
@@ -1,3 +1,6 @@
+2007-11-20 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 1.7.90
+
 2007-11-04 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 1.7.14
 
