--- a/graphics/gimp/HISTORY
+++ b/graphics/gimp/HISTORY
@@ -1,3 +1,6 @@
+2007-11-21 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.4.2
+
 2007-11-01 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* DETAILS: updated to 2.4.1
 
