--- a/devel/phpmyadmin/HISTORY
+++ b/devel/phpmyadmin/HISTORY
@@ -1,3 +1,7 @@
+2007-11-21 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.11.2.2, SECURITY_PATCH=10
+	  http://www.phpmyadmin.net/home_page/security.php?issue=PMASA-2007-8
+
 2007-11-11 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.11.2.1, SECURITY_PATCH=9
 	  http://www.phpmyadmin.net/home_page/security.php?issue=PMASA-2007-7
