--- a/collab/openldap/HISTORY
+++ b/collab/openldap/HISTORY
@@ -1,3 +1,7 @@
+2007-11-21 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.4.6
+	* UP_TRIGGERS: added
+
 2007-09-02 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 2.3.38
 	  Removed non-working SOURCE_URL[2] and SOURCE_URL[3]
