--- a/video/vlc/HISTORY
+++ b/video/vlc/HISTORY
@@ -1,3 +1,6 @@
+2007-11-21 Arwed v. Merkatz <v.merkatz@gmx.net>
+	* PRE_BUILD, ffmpeg-api.patch: fix for latest ffmpeg-svn support
+
 2007-10-22 Pol Vinogradov <vin.public@gmail.com>
 	* BUILD: install_rootifying paths, added iceweasel support
 
