--- a/video/mplayer/HISTORY
+++ b/video/mplayer/HISTORY
@@ -1,3 +1,6 @@
+2007-11-21 Arwed v. Merkatz <v.merkatz@gmx.net>
+	* PRE_BUILD, libavformat-api.patch: fix to support latest ffmpeg-svn
+
 2007-10-18 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* DEPENDS: removed the MPLAYER_SVN check around the live dependency,
 	  both versions use the new flags now, moved polypaudio
