--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-11-21 Ladislav Hagara <hgr@vabo.cz>
+	* disk/dd_rescue: new spell, a dd which ignores errors
+
 2007-11-19 Ladislav Hagara <hgr@vabo.cz>
 	* mail/libytnef: new spell, TNEF Stream Parser Library
 	* mail/ytnef: new spell, Yerase's TNEF Stream Reader
