--- a/disk/ddrescue/HISTORY
+++ b/disk/ddrescue/HISTORY
@@ -1,2 +1,6 @@
+2007-11-21 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.6
+	* DEPENDS: added
+
 2006-08-27 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* BUILD, DETAILS, HISTORY: created spell
