video/dvbcut: depend on ffmpeg instead of ffmpeg-svn

--- a/video/dvbcut/HISTORY
+++ b/video/dvbcut/HISTORY
@@ -1,3 +1,8 @@
+2007-11-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DEPENDS: changed dependency to ffmpeg instead of ffmpeg-svn
+	  since dvbcut is incompatible with the most recent version from
+	  svn
+
 2007-11-17 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: updated to 0.5.4
 	* DEPENDS, BUILD: added missing dependencies, use system ffmpeg
