--- a/video/mplayer/HISTORY
+++ b/video/mplayer/HISTORY
@@ -1,3 +1,7 @@
+2007-11-22 Arwed v. Merkatz <v.merkatz@gmx.net>
+	* PRE_BUILD, libavformat-api.patch: removed, they caught up with the
+	  ffmpeg changes
+
 2007-11-21 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* PRE_BUILD, libavformat-api.patch: fix to support latest ffmpeg-svn
 
