--- a/gnome2-apps/gnumeric/HISTORY
+++ b/gnome2-apps/gnumeric/HISTORY
@@ -1,3 +1,8 @@
+2007-11-22 George Sherwood <george@beernabeer.com>
+	* PRE_BUILD: Added patch.
+	* session.patch: Added patch to fix problem when building
+	  --without-gnome
+
 2007-11-20 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 1.7.90
 
