kvm updated to 53 happy thanksgivinggit-status

--- a/kernels/kvm/HISTORY
+++ b/kernels/kvm/HISTORY
@@ -1,3 +1,6 @@
+2007-11-22 David Brown <dmlb2000@gmail.com>
+	* DETAILS: updated to 53
+
 2007-11-12 David Brown <dmlb2000@gmail.com>
 	* DETAILS: updated to 52
 
