--- a/libs/gwenhywfar/HISTORY
+++ b/libs/gwenhywfar/HISTORY
@@ -1,3 +1,6 @@
+2007-11-22 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 3.0.0
+
 2007-03-01 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* DEPENDS: made openssl required #12206
 	* DETAILS: updated spell to 2.5.4
