libs/libchipcard2: deprecated in favour of libchipcard, updated to 4.0.0

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-11-22 Ladislav Hagara <hgr@vabo.cz>
+	* libs/libchipcard2: deprecated in favour of libs/libchipcard
+
 2007-11-21 Ladislav Hagara <hgr@vabo.cz>
 	* disk/dd_rescue: new spell, a dd which ignores errors
 
