--- a/libs/libchipcard/HISTORY
+++ b/libs/libchipcard/HISTORY
@@ -1,5 +1,6 @@
 2007-11-22 Ladislav Hagara <hgr@vabo.cz>
-	* *: Deprecated in favour of libchipcard
+	* DETAILS: 4.0.0, created from libchipcard2
+	* CONFLICTS: added
 
 2006-09-27 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.1.9
