--- a/gnome2-apps/gcstar/HISTORY
+++ b/gnome2-apps/gcstar/HISTORY
@@ -1,3 +1,7 @@
+2007-11-22 Philippe "Puppet_Master" Caseiro <puppetmaster@sourcemage.org>
+	* DETAILS: updating spell to 1.3.0, temporary use SOURCHE_HASH instead of SOURCE_GPG
+        * DEPENDS: Adding xml-libxml (is now needed)
+
 2007-01-14 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* DEPENDS: made xml-simple required #13275
 	* CONFIGURE: removed a now redundant query
