--- a/audio-players/sonata/HISTORY
+++ b/audio-players/sonata/HISTORY
@@ -1,3 +1,6 @@
+2007-11-23 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: Updated to version 1.3
+
 2007-09-11 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: Updated to version 1.2.3
 
