--- a/printer/ghostscript/HISTORY
+++ b/printer/ghostscript/HISTORY
@@ -1,3 +1,6 @@
+2007-11-23 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 8.61
+
 2007-08-16 Treeve Jelbert <treeve@sourcemage.org>
 	* CONFLICTS: gs-afpl is also deprecated
 
