--- a/kernels/iwlwifi/HISTORY
+++ b/kernels/iwlwifi/HISTORY
@@ -1,3 +1,6 @@
+2007-11-22 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 1.2.0
+
 2007-10-20 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Only needs mac80211 for 2.6.22 and older
 	* CONFLICTS: Conflicts with mac80211 for 2.6.23 and newer, since it's
