--- a/graphics-libs/mesalib/HISTORY
+++ b/graphics-libs/mesalib/HISTORY
@@ -1,3 +1,6 @@
+2007-11-23 Eric Sandall <sandalle@sourcemage.org>
+	* CONFLICTS: No longer conflicts with xorg-modular profile spell, xorg
+
 2007-09-30 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DEPENDS: lock in to -modular only
 
