--- a/xorg-xserver/xorg-server/HISTORY
+++ b/xorg-xserver/xorg-server/HISTORY
@@ -14,6 +14,10 @@
 	* UP_TRIGGERS: stuff needs to be rebuilt
 	* DETAILS: mesalib to 7.0.2
 
+2007-11-23 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Depends on libx11
+	* PROVIDES: Does not provide X11-LIBS (libx11 does)
+
 2007-10-14 Ismael E. Luceno <ismael.luceno@gmail.com>
 	* DETAILS: updated description & short
 
@@ -188,3 +192,4 @@
 
 2005-11-25 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS, HISTORY: created spell
+
