genshi: new spell, python toolkit for generation of output for the web

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-23 Vlad Glagolev <stealth@sourcemage.org>
+	* python-devel/genshi: new spell, python toolkit for generation
+	  of output for the web
+
 2007-11-22 Ladislav Hagara <hgr@vabo.cz>
 	* libs/libchipcard2: deprecated in favour of libs/libchipcard
 
