--- a/kde-apps/ktorrent/HISTORY
+++ b/kde-apps/ktorrent/HISTORY
@@ -1,3 +1,6 @@
+2007-11-23 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 2.2.4
+
 2007-11-15 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DETAILS: Updated to version 2.2.3
 
