--- a/x11/conky/HISTORY
+++ b/x11/conky/HISTORY
@@ -1,3 +1,6 @@
+2007-11-24 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.4.9
+
 2007-11-11 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.4.8
 
