--- a/gnome2-libs/glib2/HISTORY
+++ b/gnome2-libs/glib2/HISTORY
@@ -1,3 +1,6 @@
+2007-11-24 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.14.4
+
 2007-11-12 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.14.3
 
