--- a/gnome2-libs/gnome-python2/HISTORY
+++ b/gnome2-libs/gnome-python2/HISTORY
@@ -1,3 +1,6 @@
+2007-11-24 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.20.1
+
 2007-09-20 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.20.0
 
