--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-25 David Kowis <dkowis@shlrm.org>
+	* utils/linux32: New spell for emulating stuff for x86_64
+	  (Mostly only needed for nspluginwrapper)
+
 2007-11-23 Vlad Glagolev <stealth@sourcemage.org>
 	* python-devel/genshi: new spell, python toolkit for generation
 	  of output for the web
