--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-11-25 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* security-libs/pam-krb5: new krb5 module for pam
+
 2007-11-23 Vlad Glagolev <stealth@sourcemage.org>
 	* python-devel/genshi: new spell, python toolkit for generation
 	  of output for the web
