libpaper: Added a simple paper size library

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-11-26 Eric Sandall <sandalle@sourcemage.org>
+	* libs/libpaper: Added a simple paper size library
+
 2007-11-06 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* groups: added shadow, corrected
 	* security-libs/pam_sotp: new spell, a simple One Time Password
