--- a/gnome2-libs/gtkhtml2/HISTORY
+++ b/gnome2-libs/gtkhtml2/HISTORY
@@ -1,3 +1,6 @@
+2007-11-26 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 3.16.2
+
 2007-10-16 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 3.16.1
 
