--- a/gnome2-libs/gtksourceview/HISTORY
+++ b/gnome2-libs/gtksourceview/HISTORY
@@ -1,3 +1,6 @@
+2007-11-26 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.0.2
+
 2007-10-17 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.0.1
 
