--- a/gnome2-libs/libsoup/HISTORY
+++ b/gnome2-libs/libsoup/HISTORY
@@ -1,3 +1,6 @@
+2007-11-26 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.2.104
+
 2007-10-29 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.2.103
 
