--- a/gnome2-apps/tomboy/HISTORY
+++ b/gnome2-apps/tomboy/HISTORY
@@ -1,3 +1,6 @@
+2007-11-26 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 0.8.2
+
 2007-10-17 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 0.8.1
 
