--- a/gnome2-apps/evolution/HISTORY
+++ b/gnome2-apps/evolution/HISTORY
@@ -1,3 +1,6 @@
+2007-11-26 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.12.2
+
 2007-11-04 Arjan Bouter <abouter@sourcemage.org>
 	* G_SCHEMAS: removed versions
 
