--- a/gnome2-apps/eog2/HISTORY
+++ b/gnome2-apps/eog2/HISTORY
@@ -1,3 +1,6 @@
+2007-11-26 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.20.3
+
 2007-11-13 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.20.2
 
