--- a/audio-plugins/amb-plugins/HISTORY
+++ b/audio-plugins/amb-plugins/HISTORY
@@ -1,2 +1,5 @@
+2007-11-27 Juuso Alasuutari <iuso@sourcemage.org>
+	* DETAILS: Updated WEB_SITE.
+
 2006-08-18 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS, DEPENDS, BUILD, INSTALL, HISTORY: created spell
