--- a/x11/xsensors/HISTORY
+++ b/x11/xsensors/HISTORY
@@ -1,3 +1,7 @@
+2007-11-27 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: PATCHLEVEL=1
+	* PRE_BUILD, xsensors-0.60-libsensors-3.patch.bz2: added patch due to lm_sensors 3.0.0
+
 2007-11-06 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.60
 
