kernels/i2c-tools: new spell, I2C tools for Linux These tools were originally part of the lm-sensors package.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-11-27 Ladislav Hagara <hgr@vabo.cz>
+	* kernels/i2c-tools: new spell, I2C tools for Linux
+
 2007-11-26 Eric Sandall <sandalle@sourcemage.org>
 	* libs/libpaper: Added a simple paper size library
 
