--- a/http/firefox/HISTORY
+++ b/http/firefox/HISTORY
@@ -1,3 +1,10 @@
+2007-11-27 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to versoin 2.0.0.10. SECURITY_PATCH++
+	  http://www.mozilla.org/projects/security/known-vulnerabilities.html#firefox2.0.0.10
+	* firefox-config.patch: Updated to 2.0.0.10
+	* PRE_BUILD: Removed patch
+	* gdkpango.patch: Removed. Incorporated upstream.
+
 2007-11-02 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 2.0.0.9.
 	* firefox-config.patch: Updated to 2.0.0.9
