--- a/chat-im/pidgin/HISTORY
+++ b/chat-im/pidgin/HISTORY
@@ -1,3 +1,6 @@
+2007-11-27 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 2.3.0
+
 2007-10-25 George Sherwood <george@beernabeer.com>
 	* DETAILS: Udated to version 2.2.2
 
