--- a/database/sqlite/HISTORY
+++ b/database/sqlite/HISTORY
@@ -1,3 +1,6 @@
+2007-11-28 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 3.5.3
+
 2007-11-06 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to verison 3.5.2
 	  Updated SOURCE_URL and WEB_SITE 
