iwlwifi: Make fails the first time for a certain instance, this could be cleaner

--- a/kernels/iwlwifi/HISTORY
+++ b/kernels/iwlwifi/HISTORY
@@ -1,3 +1,8 @@
+2007-11-27 Eric Sandall <sandalle@sourcemage.org>
+	* BUILD: Fails the first time if it has to regenerate the Makefile
+	  The error denoting this state is: "Makefile has been modified by
+	  generate_compatible, please run `make' again"
+
 2007-11-22 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 1.2.0
 
