--- a/kde4/kdenetwork4/HISTORY
+++ b/kde4/kdenetwork4/HISTORY
@@ -1,3 +1,6 @@
+2007-11-27  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.96.0
+
 2007-11-09  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.95.2
 
