--- a/audio-drivers/jackdmp/HISTORY
+++ b/audio-drivers/jackdmp/HISTORY
@@ -1,3 +1,12 @@
+2007-11-28 Juuso Alasuutari <iuso@sourcemage.org>
+	* DETAILS: Updated to 0.68.
+	* CONFIGURE: Removed jackd symlink query, the makefile now installs
+	  a symlink by default.
+	* INSTALL: Removed header and symlink install code, the makefile
+	  does this now.
+	* jack.pc: Changed version number to 0.103.0 to match the JACK MIDI
+	  API that jackdmp now uses.
+
 2007-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: Corrected WEB_SITE.
 
