--- a/kde4/kde4-profile/HISTORY
+++ b/kde4/kde4-profile/HISTORY
@@ -1,3 +1,6 @@
+2007-11-28  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.96.1
+
 2007-11-27  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.96.0
 
