--- a/kde4/kdetoys4/HISTORY
+++ b/kde4/kdetoys4/HISTORY
@@ -1,3 +1,9 @@
+2007-11-28  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.96.1
+
+2007-11-27  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.96.0
+
 2007-11-09  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.95.2
 
