--- a/kernels/iwlwifi/HISTORY
+++ b/kernels/iwlwifi/HISTORY
@@ -6,16 +6,10 @@
 2007-11-22 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 1.2.0
 
-2007-10-20 Eric Sandall <sandalle@sourcemage.org>
-	* DEPENDS: Only needs mac80211 for 2.6.22 and older
-	* CONFLICTS: Conflicts with mac80211 for 2.6.23 and newer, since it's
-	  now in the kernel
-	* PRE_BUILD: Check for CONFIG_FW_LOADER and CONFIG_MAC80211
-
 2007-10-09 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Nope, it just doesn't work often and it happened to be a
-	  fluke that iwlwifi worked again after installing ieee80211. Only
-	  needs mac80211
+	  fluke that iwlwifi worked again after installing ieee80211.
+	  Only needs mac80211
 
 2007-10-08 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Also seems to depend on ieee80211 to work properly
