--- a/audio-libs/openal/HISTORY
+++ b/audio-libs/openal/HISTORY
@@ -1,3 +1,7 @@
+2007-11-28 Eric Sandall <sandalle@sourcemage.org>
+	* PRE_BUILD: Only apply gcc42.patch for $OPENAL_VERSION=release
+	  See Bug #14126
+
 2007-11-12 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* PRE_BUILD: fixed path to the patch
 	* DETAILS: fixed fetching from svn
