openal: Fix Bug #14126 (gcc42.patch fails for snapshot)

--- a/audio-libs/openal/HISTORY
+++ b/audio-libs/openal/HISTORY
@@ -1,3 +1,7 @@
+2007-11-28 Eric Sandall <sandalle@sourcemage.org>
+	* PRE_BUILD: Only apply gcc42.patch for $OPENAL_VERSION=release
+	  See Bug #14126
+
 2007-11-11 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* PRE_BUILD, gcc42.patch: fix gcc 4.2 problem
 	* BUILD, PRE_BUILD: cd to the correct dir
