wm2: added release version and cvs autoupdate

--- a/windowmanagers/wm2/HISTORY
+++ b/windowmanagers/wm2/HISTORY
@@ -1,3 +1,7 @@
+2007-11-28 Arjan Bouter <abouter@sourcemage.org>
+	* DETAILS: added release version and autoupdate for cvs
+	* PREPARE: added cvs autoupdate query
+
 2006-09-06 Pieter Lenaerts <e-type@sourcemage.org>
 	* DETAILS: updated cvs url
 
