--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-11-28 Arjan Bouter <abouter@sourcemage.org>
+	* windowmanagers/wmx: new spell enhanced wm2 based windowmanager
+
 2007-11-27 Ladislav Hagara <hgr@vabo.cz>
 	* kernels/i2c-tools: new spell, I2C tools for Linux
 
