hotswap: fixed INSTALL and DEPENDS

--- a/disk/hotswap/INSTALL
+++ b/disk/hotswap/INSTALL
@@ -1,2 +1,2 @@
 default_install &&
-install doc/hotswaprc.example $INSTALL_ROOT/etc/hotswaprc
+install_config_file doc/hotswaprc.example $INSTALL_ROOT/etc/hotswaprc
