Updating deluge's HISTORY file

--- a/ftp/deluge/HISTORY
+++ b/ftp/deluge/HISTORY
@@ -1,3 +1,5 @@
+2007-11-28 Philippe "Puppet_Master" Caseiro <puppetmaster@sourcemage.org>
+	* DEPENDS: Updating version to 0.5.7
 2007-11-26 Philippe "Puppet_Master" Caseiro <puppetmaster@sourcemage.org>
 	* DETAILS: Updating version to 0.5.6.96
 
