--- a/windowmanagers/xmonad/HISTORY
+++ b/windowmanagers/xmonad/HISTORY
@@ -1,3 +1,6 @@
+2007-11-28 Arjan Bouter <abouter@sourcemage.org>
+	* DETAILS: version 0.4.1
+
 2007-10-21 Alexander Tsamutali <astsmtl@gmail.com>
 	* DETAILS: updated spell to 0.4
 
