--- a/gnome2-libs/java-access-bridge/HISTORY
+++ b/gnome2-libs/java-access-bridge/HISTORY
@@ -1,3 +1,6 @@
+2007-11-29 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 1.20.2
+
 2007-10-20 Robin Cook <rcook@wyrms.net>
 	* DEPENDS: added at-spi and libbonobo
 
