--- a/x11-libs/cairo/HISTORY
+++ b/x11-libs/cairo/HISTORY
@@ -1,3 +1,6 @@
+2007-11-29 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 1.4.12
+
 2007-06-27 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 1.4.10
 
