--- a/kde4/koffice2/HISTORY
+++ b/kde4/koffice2/HISTORY
@@ -1,3 +1,7 @@
+2007-11-28 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.9.95
+	* DEPENDS: add libwpd
+
 2007-10-18 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.9.94
 
