--- a/disk/ntfs-3g/HISTORY
+++ b/disk/ntfs-3g/HISTORY
@@ -1,3 +1,6 @@
+2007-11-29 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.1120
+
 2007-11-05 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.1104
 
