--- a/video-libs/live/HISTORY
+++ b/video-libs/live/HISTORY
@@ -1,3 +1,6 @@
+2007-11-29 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2007.11.18
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
