--- a/video/vlc/HISTORY
+++ b/video/vlc/HISTORY
@@ -1,3 +1,6 @@
+2007-11-29 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 0.8.6d
+
 2007-11-21 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* PRE_BUILD, ffmpeg-api.patch: fix for latest ffmpeg-svn support
 
