--- a/devel/jam/HISTORY
+++ b/devel/jam/HISTORY
@@ -1,3 +1,7 @@
+2007-11-29 Eric Sandall <sandalle@sourcemage.org>
+	* PRE_BUILD: Fix compilation with gcc 4.2 (Bug #14145)
+	  See http://maillist.perforce.com/pipermail/jamming/2007-May/002913.html
+
 2007-01-20 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: added dependency on bison
 	* BUILD: added make_single before make to fix a compile error,
