--- a/gnome2-libs/gnome-speech/HISTORY
+++ b/gnome2-libs/gnome-speech/HISTORY
@@ -1,3 +1,8 @@
+2007-11-29 Eric Sandall <sandalle@sourcemage.org>
+	* According to the diff's ChangeLog, all that changed is:
+	  configure.in, NEWS, README: prep for 0.4.16.
+	  Fixes Bug #14009
+
 2007-07-29 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 0.4.16
 
