--- a/video-libs/gst-plugins-good/HISTORY
+++ b/video-libs/gst-plugins-good/HISTORY
@@ -1,3 +1,7 @@
+2007-11-29 Eric Sandall <sandalle@sourcemage.org>
+	* Fix to work with gst-plugins-base 0.10.15
+	  See http://bugzilla.gnome.org/show_bug.cgi?id=498181
+
 2007-09-22 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: ascii -> ASCII in text description
 	* PRE_SUB_DEPENDS, SUB_DEPENDS: Allow e-emotion to depend on gst-plugins-good
