--- a/devel/graphviz/HISTORY
+++ b/devel/graphviz/HISTORY
@@ -1,3 +1,7 @@
+2007-11-29 Eric Sandall <sandalle@sourcemage.org>
+	* PRE_BUILD: Remove the entire ./configure line or PRE_BUILD fails with:
+	  -C: command not found
+
 2007-11-08 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* PRE_BUILD: removed configure call from autogen.sh
 
