--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-29 Ismael Luceno <ismael@sourcemage.org>
+	* smgl/initng: new spell, the next generation init system
+	* smgl/initng-ifiles: new spell, initng scripts
+
 2007-11-28 Arjan Bouter <abouter@sourcemage.org>
 	* windowmanagers/wmx: new spell, enhanced wm2 based windowmanager
 	* disk/hotswap: new spell, hotswap app for laptops
