clisp: Updated to 2.43

--- a/devel/clisp/HISTORY
+++ b/devel/clisp/HISTORY
@@ -1,3 +1,6 @@
+2007-11-29 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 2.43
+
 2007-10-24 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 2.42
 	  New key FDAA9CC7 Sam Steingold <sam.steingold@gmail.com> has not
