* Move httpd.gpg from http/apache to grimoire-level apache.gpg * apache2: Use upstream key in apache.gpg

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-11-29 Eric Sandall <sandalle@sourcemage.org>
+	* httpd/apache2/httpd.gpg: Moved to grimoire level apache.gpg
+
 2007-11-29 Ismael Luceno <ismael@sourcemage.org>
 	* smgl/initng: new spell, the next generation init system
 	* smgl/initng-ifiles: new spell, initng scripts
