--- a/http/apache2/HISTORY
+++ b/http/apache2/HISTORY
@@ -1,3 +1,6 @@
+2007-11-29 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Use upstream apache.gpg
+
 2007-09-10 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.0.61, SECURITY_PATCH=2
 	  CVE-2007-3847, CVE-2007-1863, CVE-2006-5752, CVE-2007-3304
