apache2: Clean up extra spaces

--- a/http/apache2/HISTORY
+++ b/http/apache2/HISTORY
@@ -1,5 +1,6 @@
 2007-11-29 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Use upstream apache.gpg
+	  Cleaned up extra spaces in long description
 
 2007-09-10 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.0.61, SECURITY_PATCH=2
