apr0: Updated to 0.9.17 and use apache.gpg

--- a/libs/apr0/HISTORY
+++ b/libs/apr0/HISTORY
@@ -1,3 +1,8 @@
+2007-11-29 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 0.9.17
+	  Use upstream apache.gpg key and signatures
+	  Removed UPDATED
+
 2006-09-21 Juuso Alasuutari <iuso@sourcemage.org>
 	* PROVIDES: [automated] Fixed invalid entries.
 
