apr-util0: Updated to 0.9.15 and use upstream apache.gpg

--- a/libs/apr-util0/HISTORY
+++ b/libs/apr-util0/HISTORY
@@ -1,3 +1,7 @@
+2007-11-29 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 0.9.15
+	  Use upstream apache.gpg key and signatures
+
 2007-02-22 David Kowis <dkowis@shlrm.org>
 	* DEPENDS: delinting, put source statement in an if
 
