--- a/http/apache2/HISTORY
+++ b/http/apache2/HISTORY
@@ -1,6 +1,8 @@
 2007-11-29 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Use upstream apache.gpg
 	  Cleaned up extra spaces in long description
+	* buildconf.patch: Re-apply patch (finish Bug #13989)
+	* PRE_BUILD: Apply buildconf.patch again (Bug #13989)
 
 2007-09-10 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.0.61, SECURITY_PATCH=2
