apr-util: Use upstream apache.gpg key

--- a/libs/apr-util/HISTORY
+++ b/libs/apr-util/HISTORY
@@ -1,3 +1,6 @@
+2007-11-29 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Use upstream apache.gpg key and signatures
+
 2007-03-08 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: add optional sqlite, sqlite2, psotgresql
 
