windowmanagers/fluxbox: bug #13828 fix didnt work properly, DOWNLOAD from valgrind spell works

--- a/windowmanagers/fluxbox/HISTORY
+++ b/windowmanagers/fluxbox/HISTORY
@@ -1,3 +1,6 @@
+2007-11-30 Elisamuel Resto <ryuji@mages.ath.cx>
+	* DOWNLOAD: #13828 fix didnt work properly, file from valgrind spell does
+
 2007-11-12 Arjan Bouter <abouter@sourcemage.org>
 	* DETAILS: fixed svn SOURCE_DIRECTORY
 	* DOWNLOAD: added to fix bug #13828
