firefox: updated to 2.0.0.11

--- a/http/firefox/HISTORY
+++ b/http/firefox/HISTORY
@@ -1,3 +1,7 @@
+2007-12-01 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: SECURITY_PATCH++
+	  updated spell to 2.0.0.11
+
 2007-11-27 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to versoin 2.0.0.10. SECURITY_PATCH++
 	  http://www.mozilla.org/projects/security/known-vulnerabilities.html#firefox2.0.0.10
