linux fixed path for vmlinuz in xen kernel

--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,6 +1,6 @@
 2007-11-30 David Brown <dmlb2000@gmail.com>
     * BUILD: added some checks for xen kernel
-    * INSTALL: added some checks for xen kernel
+    * INSTALL: added some checks for xen kernel and fixed location
 
 2007-11-26 David Brown <dmlb2000@gmail.com>
 	* latest.defaults: updated latest to patch-2.6.23.9
