--- a/kernels/linux/INSTALL
+++ b/kernels/linux/INSTALL
@@ -31,7 +31,7 @@ if [[ -z "$INTERNAL_ISO_VAR" ]] ; then
 		*)
             if grep CONFIG_XEN=y ./.config
             then
-				cp ${LINUX_SOURCE_DIRECTORY}/vmlinuz \
+				cp ${LINUX_SOURCE_DIRECTORY}/arch/${KERNEL_ARCH}/boot/vmlinuz \
 				${INSTALL_ROOT}/boot/vmlinuz-$VERSION &&
 				ln -sf vmlinuz-${VERSION} \
 				${INSTALL_ROOT}/boot/vmlinuz
