jam: Override user flags so the spell compiles

--- a/devel/jam/HISTORY
+++ b/devel/jam/HISTORY
@@ -1,3 +1,7 @@
+2007-11-30 Eric Sandall <sandalle@sourcemage.org>
+	* PRE_BUILD: Override user-flags in case they set -fstrict-aliasing
+	  Thanks Jaka
+
 2007-11-29 Eric Sandall <sandalle@sourcemage.org>
 	* PRE_BUILD: Fix compilation with gcc 4.2 (Bug #14145)
 	  See http://maillist.perforce.com/pipermail/jamming/2007-May/002913.html
