xfce: Works with any provider of LIBGIF

--- a/windowmanagers/xfce/HISTORY
+++ b/windowmanagers/xfce/HISTORY
@@ -1,3 +1,6 @@
+2007-11-29 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Works with any provider of LIBGIF
+
 2006-09-21 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed BUILD_API=2 and MAINTAINER.
 
