xfce: Alphabetize dependency list

--- a/windowmanagers/xfce/HISTORY
+++ b/windowmanagers/xfce/HISTORY
@@ -2,6 +2,7 @@
 	* DEPENDS: Works with any provider of LIBGIF
 	  Add xorg-modular checks
 	  Redundant dependency on X11-LIBS for non-xorg-modular to set Xft
+	  Alphabetize list
 	* BUILD: Pass user $OPTS last to override our settings
 	  Proper data-dir switch is --with-data-dir (Bug #14140)
 	  Don't use "echo" to set OPTS
