xfce: Also depends on glib

--- a/windowmanagers/xfce/HISTORY
+++ b/windowmanagers/xfce/HISTORY
@@ -1,6 +1,7 @@
 2007-11-29 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Works with any provider of LIBGIF
 	  Add xorg-modular checks
+	  Add dependency on glib
 	  Redundant dependency on X11-LIBS for non-xorg-modular to set Xft
 	  Alphabetize list
 	* BUILD: Pass user $OPTS last to override our settings
