gpm: Fails to compile with multiple make jobs

--- a/utils/gpm/HISTORY
+++ b/utils/gpm/HISTORY
@@ -1,6 +1,7 @@
 2007-12-01 Eric Sandall <sandalle@sourcemage.org>
 	* PRE_BUILD: Apply gpm-OPEN_MAX-1.patch and gpm-OPEN_MAX-2.patch
 	  (Bug #14109)
+	* BUILD: Fails to compile with multiple make jobs
 	* gpm-OPEN_MAX-1.patch: Patch from P. Berens to fix Bug #14109
 	* gpm-OPEN_MAX-2.patch: Patch from P. Berens to fix Bug #14109
 
