dvdshrink: Added spell from Daniel Goller (Bug #11796)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-12-01 Eric Sandall <sandalle@sourcemage.org>
+	* video/dvdshrink: Added spell from Daniel Goller (Bug #11796)
+
 2007-11-30 Eric Sandall <sandalle@sourcemage.org>
 	* e/e16-themes: Added e16 themes (Bug #14146)
 
