dvdshrink: Cleanups (install_root, formatting, remove deprecated variables)

--- a/video/dvdshrink/INSTALL
+++ b/video/dvdshrink/INSTALL
@@ -1,8 +1,8 @@
 for DIR in doc applications; do
-   if [ ! -d /usr/share/$DIR/dvdshrink ]; then
-      mkdir -p /usr/share/$DIR/dvdshrink
+   if [ ! -d $INSTALL_ROOT/usr/share/$DIR/dvdshrink ]; then
+      mkdir -p $INSTALL_ROOT/usr/share/$DIR/dvdshrink
    fi
 done
 
-cp usr/bin/* /usr/bin
-cp -R usr/share/* /usr/share
+cp usr/bin/* $INSTALL_ROOT/usr/bin
+cp -R usr/share/* $INSTALL_ROOT/usr/share
