nspr: Added optional patch for static_assert.  Needed at least for firefox 3.

--- a/libs/nspr/HISTORY
+++ b/libs/nspr/HISTORY
@@ -1,3 +1,10 @@
+2007-12-01 George Sherwood <george@beernabeer.com>
+	* CONFIGURE: Added to query for optional STATIC_ASSERT
+	* PRE_BUILD: Added to apply STATIC_ASSERT patch
+	* assert.patch: Added patch from 
+	  http://paketler.pardus.org.tr/2007/source/nspr.html
+	  Needed to use system npsr in firefox 3
+
 2007-07-17 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 4.6.7
 
