ruby-glib2: Compile again with glib2 > 2.14.1 (Bug #14114) (cherry picked from commit f53370367cb0b2a28ff4382c616af5aed7dc9e39)

--- a/gnome2-libs/ruby-glib2/HISTORY
+++ b/gnome2-libs/ruby-glib2/HISTORY
@@ -1,3 +1,12 @@
+2007-12-01 Eric Sandall <sandalle@sourcemage.org>
+	* 01-timeout_add_seconds.patch: Patch between 1.10 and 1.13 from
+	  Revision 1.12 from http://ruby-gnome2.cvs.sourceforge.net/ruby-gnome2/ruby-gnome2/glib/src/rbglib_maincontext.c?view=log
+	  Fixes Bug #14114
+	* 02-unicode.patch: Patch from 1.7 to 1.9 from
+	  Revision 1.12 from http://ruby-gnome2.cvs.sourceforge.net/ruby-gnome2/ruby-gnome2/glib/src/rbglib_maincontext.c?view=log
+	  Fixes another compile issue with glib2 > 2.14.1
+	* PRE_BUILD: Apply patches in-order
+
 2007-03-18 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 0.16.0
 
