ftp/createtorrent: new spell, light BitTorrent file creator

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-12-01 Elisamuel Resto <ryuji@sourcemage.org>
+	* ftp/createtorrent: new spell, light BitTorrent file creator
+
 2007-12-01 Ismael Luceno <ismael@sourcemage.org>
 	* devel/codeblocks: new spell, wxwidgets based IDE
 
