perl-gtk2-spell: new spell added

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-12-01 Robin Cook <rcook@wyrms.net>
+	* perl-cpan: added spell perl-gtk2-spell
+
 2007-11-28 Arjan Bouter <abouter@sourcemage.org>
 	* windowmanagers/wmx: new spell, enhanced wm2 based windowmanager
 	* disk/hotswap: new spell, hotswap app for laptops
