time-piece: new spell added

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2007-12-01 Robin Cook <rcook@wyrms.net>
 	* perl-cpan: added spell perl-gtk2-spell
+	* perl-cpan: added spell time-piece
 
 2007-12-01 Elisamuel Resto <ryuji@sourcemage.org>
 	* ftp/createtorrent: new spell, light BitTorrent file creator
