datetime-format-strptime: new spell

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2007-12-01 Robin Cook <rcook@wyrms.net>
 	* perl-cpan: added spell perl-gtk2-spell
 	* perl-cpan: added spell time-piece
+	* perl-cpan: added datetime-format-strptime
 
 2007-12-01 Elisamuel Resto <ryuji@sourcemage.org>
 	* ftp/createtorrent: new spell, light BitTorrent file creator
