firefox: Fixed extra && on last line in DEPENDS

--- a/http/firefox/HISTORY
+++ b/http/firefox/HISTORY
@@ -1,6 +1,6 @@
 2007-12-02 George Sherwood <george@beernabeer.com>
 	* DEPENDS: Cleaned up. 3.0 beta cannot use system npsr, nss.
-	  depends python
+	  depends python. Cleaned up extra &&
 	* PRE_BUILD: 3.0 doesn't need cairo-fixes or x-lib patches.
 	* mozconfig3: Cannot use system npsr/nss. Canvas works.
 
