windowmanagers/xmonad: doesn't depend on haskell-x11-extras

--- a/windowmanagers/xmonad/HISTORY
+++ b/windowmanagers/xmonad/HISTORY
@@ -1,3 +1,6 @@
+2007-12-02 Alexander Tsamutali <astsmtl@gmail.com>
+	* DEPENDS: doesn't depend on haskell-x11-extras
+
 2007-11-28 Arjan Bouter <abouter@sourcemage.org>
 	* DETAILS: version 0.4.1
 
