haskell/haskell-parsec: new spell, monadic parser combinators

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-12-02 Alexander Tsamutali <astsmtl@gmail.com>
+	* haskell/haskell-parsec: new spell, monadic parser combinators
+
 2007-12-01 Robin Cook <rcook@wyrms.net>
 	* perl-cpan: added spell perl-gtk2-spell
 	* perl-cpan: added spell time-piece
