xorg-xserver/xorg-server: hack in FINAL to break lefs off some other spells to get the ordering proper and various other bugfixes that hopefully solve most bugs...

--- a/xorg-xserver/xorg-server/HISTORY
+++ b/xorg-xserver/xorg-server/HISTORY
@@ -1,3 +1,11 @@
+2007-12-02 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* BUILD: correct some paths and fix XKB breakage
+	* PRE_BUILD: unpack into the SOURCE_DIRECTORY
+	* FINAL: add a hack to force rebuild of some spells AFTER
+	  the cast
+	* UP_TRIGGERS: stuff needs to be rebuilt
+	* DETAILS: mesalib to 7.0.2
+
 2007-10-14 Ismael E. Luceno <ismael.luceno@gmail.com>
 	* DETAILS: updated description & short
 
