thunar: Updated to version 0.9.0

--- a/xfce/thunar/HISTORY
+++ b/xfce/thunar/HISTORY
@@ -1,3 +1,6 @@
+2007-12-02 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 0.9.0. Fixed SOURCE_URL and WEB_SITE
+
 2007-11-11 Vlad Glagolev <stealth@sourcemage.org>
 	* Thunar-0.8.0.tar.bz2.sig: fixed sig
 
