jackdmp: Added VCS version option.

--- a/audio-drivers/jackdmp/HISTORY
+++ b/audio-drivers/jackdmp/HISTORY
@@ -1,3 +1,8 @@
+2007-12-02 Juuso Alasuutari <iuso@sourcemage.org>
+	* DETAILS: Added VCS version option.
+	* PREPARE: Added, query about VCS version.
+	* PRE_BUILD, BUILD: Edited to enable building of both versions.
+
 2007-11-28 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: Updated to 0.68.
 	* CONFIGURE: Removed jackd symlink query, the makefile now installs
