xfce/exo: optionally depend on hal and libnotify

--- a/xfce/exo/HISTORY
+++ b/xfce/exo/HISTORY
@@ -1,3 +1,6 @@
+2007-12-02 Elisamuel Resto <ryuji@sourcemage.org>
+	* DEPENDS: optionally depend on hal and libnotify
+
 2007-12-02 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 0.3.4. Fixed SOURCE_URL and WEB_SITE
 
