iwlwifi: Run depmod in FINAL on the correct kernel

--- a/kernels/iwlwifi/HISTORY
+++ b/kernels/iwlwifi/HISTORY
@@ -1,5 +1,6 @@
 2007-12-02 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 1.2.22
+	* FINAL: Run depmod on the correct kernel version
 
 2007-11-27 Eric Sandall <sandalle@sourcemage.org>
 	* BUILD: Fails the first time if it has to regenerate the Makefile
