alsa-driver: Call depmod in FINAL against get_kernel_version

--- a/audio-drivers/alsa-driver/HISTORY
+++ b/audio-drivers/alsa-driver/HISTORY
@@ -1,3 +1,7 @@
+2007-12-03 Eric Sandall <sandalle@sourcemage.org>
+	* INSTALL: Don't call depmod here
+	* FINAL: Call depmod here and against $(get_kernel_version)
+
 2007-10-17 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: updated to 1.0.15
 
