--- a/xfce/exo/HISTORY
+++ b/xfce/exo/HISTORY
@@ -1,3 +1,7 @@
+2007-12-03 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: gurus => upstream, refixed SOURCE_URL
+	* DEPENDS: cleaned up
+
 2007-12-02 Elisamuel Resto <ryuji@sourcemage.org>
 	* DEPENDS: optionally depend on hal and libnotify
 
