--- a/xfce/xfwm4/HISTORY
+++ b/xfce/xfwm4/HISTORY
@@ -1,3 +1,6 @@
+2007-12-03 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 4.4.2 (Xfce 4.4.2), gurus => upstream
+
 2007-10-23 George Sherwood <george@beernabeer.com>
 	* DETAILS: PATCHLEVEL++
 	* PRE_BUILD: Added to apply patch from 
