xfce4-dict-plugin: new spell, query a dictionary server from the xfce4 panel

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-12-03 Vlad Glagolev <stealth@sourcemage.org>
+	* xfce/xfce4-dict-plugin: new spell, query a dictionary server
+	  from the xfce4 panel
+
 2007-12-02 Alexander Tsamutali <astsmtl@gmail.com>
 	* haskell/haskell-parsec: new spell, monadic parser combinators
 	* haskell/haskell-stm: new spell, software transactional memory
