ghostess: New spell, a DSSI plugin host.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-12-03 Juuso Alasuutari <iuso@sourcemage.org>
+	* audio-creation/ghostess: New spell, a DSSI plugin host.
+
 2007-12-03 Vlad Glagolev <stealth@sourcemage.org>
 	* xfce/xfce4-dict-plugin: new spell, query a dictionary server
 	  from the xfce4 panel
