linux updated mm patches

--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,7 @@
+2007-12-03 David Brown <dmlb2000@gmail.com>
+	* latest.defaults: updated latest to 2.6.24-rc3-mm2
+	* info/patches/mm_patches/2.6.24-rc3-mm2: added
+
 2007-12-01 David Brown <dmlb2000@gmail.com>
     * info/patches/xen_patches/xen-3.1.2-2.6.18.8-hg323.patch: added 
 
