--- a/libs/soprano/HISTORY
+++ b/libs/soprano/HISTORY
@@ -1,3 +1,6 @@
+2007-12-04 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.98.0-rc1
+
 2007-11-16 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* DEPENDS: needs qt4 with tools (qttest)
 
