xorg-cf-files: fix config for x86-64; no lib64! (made other spells install to /usr/lib64, even when xorg didn't do that)

--- a/xorg-util/xorg-cf-files/HISTORY
+++ b/xorg-util/xorg-cf-files/HISTORY
@@ -1,3 +1,8 @@
+2007-12-04 Thomas Orgis <sobukus@sourcemage.org>
+	* PRE_BUILD, lib64.patch: X11 libdir is _not_ /usr/lib64.
+	  this config file issue made some apps (groff at least) install
+	  stuff to /usr/lib64
+
 2007-08-03  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: update description & short (automated)
 
