jack: no lib64 ... always use $PREFIX/usr/lib

--- a/audio-drivers/jack/HISTORY
+++ b/audio-drivers/jack/HISTORY
@@ -1,3 +1,6 @@
+2007-12-04 Thomas Orgis <sobukus@sourcemage.org>
+	* PRE_BUILD: no lib64!
+
 2007-07-01 Juuso Alasuutari <iuso@sourcemage.org>
 	* CONFIGURE, PRE_BUILD, PRE_SUB_DEPENDS, SUB_DEPENDS: Changed
 	  the time patch option to only apply to the stable version
