ion: fixed license, even as it is deprecated

--- a/windowmanagers/ion/HISTORY
+++ b/windowmanagers/ion/HISTORY
@@ -1,3 +1,6 @@
+2007-12-05 Arjan Bouter <abouter@sourcemage.org>
+	* DETAILS: this version was LGPL
+
 2007-02-05 Juuso Alasuutari <iuso@sourcemage.org>
 	* all: Deprecated (renamed to ion3).
 
