icewm: Updated to version 1.2.33.  Added depends libxrandr if using xorg-modular.

--- a/windowmanagers/icewm/HISTORY
+++ b/windowmanagers/icewm/HISTORY
@@ -1,3 +1,7 @@
+2007-12-05 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 1.2.33
+	* DEPENDS: Added depends libxrandr, if using xorg-modular
+
 2007-08-17 George Sherwood <george@beernabeer.com>
 	* DETAILS: updated spell to 1.2.31
 	  updated spell to 1.2.32
