--- a/x11-toolkits/qt4/HISTORY
+++ b/x11-toolkits/qt4/HISTORY
@@ -1,3 +1,6 @@
+2007-12-05 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DETAILS: updated spell to 4.3.3
+
 2007-11-16 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* BUILD, CONFIGURE: can't pass strings with spaces in it with 
 	  config_query_option, was making qt secretly forget the saved answer
