wmi: deprecated spell, doesn't build

--- a/windowmanagers/wmi/HISTORY
+++ b/windowmanagers/wmi/HISTORY
@@ -1,3 +1,9 @@
+2007-12-05 Arjan Bouter <abouter@sourcemage.org>
+	* DETAILS: commented out VERSION and SOURCE*
+	* BUILD, INSTALL: true
+	* DEPENDS: deleted
+	* deprecated spell, it fails to build
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
