--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-12-05 Arjan Bouter <abouter@sourcemage.org>
+	* windowmanagers/wmi: deprecated spell
+
 2007-12-05 Ladislav Hagara <hgr@vabo.cz>
 	* disk/avfs: new spell, A Virtual File System
 
