wmii: shortened short and removed commented-out version

--- a/windowmanagers/wmii/HISTORY
+++ b/windowmanagers/wmii/HISTORY
@@ -1,3 +1,6 @@
+2007-12-05 Arjan Bouter <abouter@sourcemage.org>
+	* DETAILS: shortened short
+
 2007-10-28 Mathieu Lonjaret <lejatorn@sourcemage.org>
 	* DETAILS: update to 3.6
 
