kahakai: deprecated spell, doesn't build

--- a/windowmanagers/kahakai/HISTORY
+++ b/windowmanagers/kahakai/HISTORY
@@ -1,3 +1,6 @@
+2007-12-05 Arjan Bouter <abouter@sourcemage.org>
+	* deprecated spell, fails to build
+
 2006-11-15 Arjan Bouter <abouter@sourcemage.org>
 	* DEPENDS: python is optional
 
