alpine: 0.99999 and SPELLING #14112

--- a/mail/alpine/HISTORY
+++ b/mail/alpine/HISTORY
@@ -1,3 +1,8 @@
+2007-12-05 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DETAILS: updated spell to 0.99999, patch from Kevin Monceaux #14112
+	  added some value to SHORT
+	* DEPENDS: added optional SPELLING
+
 2007-10-31 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* BUILD: removed the unnecessary ssl stuff
 	* DEPENDS: added more opts to the ssl stuff
