mail/alpine: forgot to update SOURCE_HASH

--- a/mail/alpine/HISTORY
+++ b/mail/alpine/HISTORY
@@ -1,5 +1,6 @@
 2007-12-05 Elisamuel Resto <ryuji@sourcemage.org>
 	* DETAILS: changed source extension to .tar.gz so versions in /old work
+	  change SOURCE_HASH
 
 2007-12-05 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* DETAILS: updated spell to 0.99999, patch from Kevin Monceaux #14112
