windowmanagers/xmonad: fixed building with ghc-6.8

--- a/windowmanagers/xmonad/HISTORY
+++ b/windowmanagers/xmonad/HISTORY
@@ -1,3 +1,6 @@
+2007-12-06 Alexander Tsamutali <astsmtl@gmail.com>
+	* PRE_BUILD, ghc-6.8.patch: fixed building with ghc-6.8
+
 2007-12-02 Alexander Tsamutali <astsmtl@gmail.com>
 	* DEPENDS: doesn't depend on haskell-x11-extras
 
