--- a/python-devel/turbogears/HISTORY
+++ b/python-devel/turbogears/HISTORY
@@ -1,3 +1,6 @@
+2007-12-06 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.0.4b3
+
 2007-11-02 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: remove sqlobject, require sqlalchemy
 
