gkt+2: Updated to version 2.12.3

--- a/x11-toolkits/gtk+2/HISTORY
+++ b/x11-toolkits/gtk+2/HISTORY
@@ -1,3 +1,6 @@
+2007-12-07 George Sherwood <george@beernabeer.com>
+	* DETAILS: UPdated VERSION to 2.12.3
+
 2007-11-26 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.12.2
 
