mysql: Updated to version 5.0.51

--- a/database/mysql/HISTORY
+++ b/database/mysql/HISTORY
@@ -1,3 +1,6 @@
+2007-12-08 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated stable to 5.0.51
+
 2007-07-14 George Sherwood <george@beernabeer.com>
 	* DETAILS: updated OLD=n to 5.0.45
 
