--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-12-08  Treeve Jelbert <treeve@sourcemage.org>
+	* libs/jbigkit: new spell: compression library
+
 2007-12-05 Arjan Bouter <abouter@sourcemage.org>
 	* windowmanagers/wmi: deprecated spell
 
