--- a/devel/lazarus/HISTORY
+++ b/devel/lazarus/HISTORY
@@ -1,3 +1,6 @@
+2007-12-08 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.9.24-0 / 0.9.25-date
+
 2007-07-19 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: delinting
 
