--- a/kde-apps/ksquirrel/HISTORY
+++ b/kde-apps/ksquirrel/HISTORY
@@ -1,3 +1,6 @@
+2007-12-08 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.8.0
+
 2007-11-05 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.7.4
 
