ilmbase: new spell, high dynamic-range (HDR) image file format library and tools

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-12-09 Vlad Glagolev <stealth@sourcemage.org>
+	* graphics-libs/ilmbase: new spell, high dynamic-range (HDR)
+	  image file format library and tools
+
 2007-12-08  Treeve Jelbert <treeve@sourcemage.org>
 	* libs/jbigkit: new spell: compression library
 
