yafray: fixed to be useable with blender

--- a/graphics/yafray/HISTORY
+++ b/graphics/yafray/HISTORY
@@ -1,3 +1,7 @@
+2007-12-08 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS, DEPENDS: cleaned up, PATCHLEVEL++
+	* BUILD, INSTALL: made it workable in blender
+
 2007-03-03 Jeremy Blosser <jblosser-smgl@firinn.org>
 	* INSTALL: Replace bad TRACK_ROOT usage (automated).
 
