--- a/disk/e2fsprogs/HISTORY
+++ b/disk/e2fsprogs/HISTORY
@@ -1,3 +1,7 @@
+2007-12-08 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.40.3
+	* BUILD, inc.diff: removed patch
+
 2007-07-15 George Sherwood <george@beernabeer.com>
 	* DETAILS: updated spell to 1.40.2. Added SOURCE2_IGNORE=signature
 
