--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-12-09  Treeve Jelbert <treeve@sourcemage.org>
+	* database/tokyocabinet: new spell, successor to qdbm
+
 2007-12-09 Vlad Glagolev <stealth@sourcemage.org>
 	* graphics-libs/ilmbase: new spell, high dynamic-range (HDR)
 	  image file format library and tools
