lm_sensors: added possibility to choose between 2 and 3 branches [Bug 14157]

--- a/kernels/lm_sensors/HISTORY
+++ b/kernels/lm_sensors/HISTORY
@@ -1,3 +1,8 @@
+2007-12-09 Ladislav Hagara <hgr@vabo.cz>
+	* PREPARE, DETAILS, DEPENDS, BUILD, INSTALL: added possibility to choose
+	  between 2 and 3 branches (DEFAULT=2) [Bug 14157]
+	* lm_sensors.gpg: now contains both 38F02FC8 and 65236AD5 keys
+
 2007-12-01 Ladislav Hagara <hgr@vabo.cz>
 	* DEPENDS, BUILD, INSTALL: removed support for 2.4.X linux kernels
 	lm_sensors 3.0 support only linux kernels > 2.6.5
